--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-scroll": "^1.9.0",
     "react-scroll-motion": "^0.3.2",
     "react-toastify": "^9.1.3"
   },
